# ReconEcoboost

./: .gitignore  README.md  README_HUMAN.md  pyproject.toml
config/: ai.yaml  pipeline.yaml  scope.example.yaml  tools.yaml  wordlists.yaml
docs/: ARCHITECTURE.md
docs/architecture/: 01-design-principles.md  02-high-level-architecture.md  03-component-diagram.md  04-data-flow.md  05-pipeline.md  06-module-system.md  07-context-object.md  08-engine-services.md  09-database.md  10-knowledge-graph.md  11-ai-abstraction.md  12-prompt-management.md  13-configuration.md  14-logging.md  15-output-management.md  16-parallel-execution.md  17-distributed-execution.md  18-folder-structure.md  (+4 more)
scripts/: install-tools.sh
tests/: test_agent_http.py  test_ai.py  test_ai_only.py  test_ai_seam.py  test_ai_wordlists.py  test_analysis.py  test_api_discovery.py  test_claude_code.py  test_cli_stages.py  test_content_subdomains.py  test_crawling.py  test_curated_context.py  test_dir_bruteforce_analysis.py  test_direct_targets.py  test_discovery_loop.py  test_dns_resolve.py  test_executor.py  test_graph.py  test_js_fetch.py  test_js_intel.py  test_nuclei.py  test_output.py  test_parallel_execution.py  test_param_discovery.py  test_parser_normalizer.py  test_permutation.py  test_persistence.py  test_prompt_manager.py  test_prompt_versions.py  test_rate_limit.py  test_recursive_discovery.py  test_results_capture.py  test_scope.py  test_secret_scan.py  test_subdomain_sources.py  test_tool_module.py  test_toolmanager.py  test_triage.py  test_url_probe.py  test_vhost.py  (+2 more)
wordlists/: README.md
(+100 files in other folders)
