[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reconecoboost"
version = "0.0.1"
description = "AI-assisted reconnaissance framework for web penetration testing and bug bounty (skeleton)."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6",
    "anthropic>=0.69",   # Claude provider (default AI backend)
    "arjun>=2.2.7,<3",   # hidden-parameter discovery (param_discovery); CLI in the venv's bin
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
reconecoboost = "reconecoboost.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
